chore: .collect(Collectors.toList())) -> .toList()) 수정 (#71)